--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 <div id="appTarget"></div>
-<script src="//unpkg.com/vue@2.5.2/dist/vue.js"></script>
+<script src="/vue/vue.js"></script>
+<script src="/nipplejs/nipplejs.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/ship.js"></script>
 <script src="/main-view.js"></script>
