Add asteroids, basic collision detection, normalize svg shape data

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 <script src="/nipplejs/nipplejs.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/ship.js"></script>
+<script src="/asteroid.js"></script>
 <script src="/main-view.js"></script>
 <script src="/index.js"></script>
 </body>
