Add Gamepad support, genericize input approach

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
 <script src="/ship.js"></script>
 <script src="/asteroid.js"></script>
 <script src="/main-view.js"></script>
+<script src="/input-touch.js"></script>
+<script src="/input-gamepad.js"></script>
 <script src="/index.js"></script>
 </body>
 </html>
