--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 <script src="/vue/vue.js"></script>
 <script src="/nipplejs/nipplejs.js"></script>
 <script src="/socket.io/socket.io.js"></script>
+<script src="/vector-text-data.js"></script>
+<script src="/vector-text.js"></script>
 <script src="/ship.js"></script>
 <script src="/asteroid.js"></script>
 <script src="/main-view.js"></script>
