--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 <script src="/vector-text.js"></script>
 <script src="/ship.js"></script>
 <script src="/asteroid.js"></script>
+<script src="/color-picker.js"></script>
 <script src="/main-view.js"></script>
 <script src="/input-touch.js"></script>
 <script src="/input-gamepad.js"></script>
