Score screen: Player scores build at same rate, Display win/loss status - Resolves & Closes #15 - Resolves & Closes #17

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>WELCOME TO ARCADE, FILTHY MORTAL!</title>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
