--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,12 @@
 <script src="/vue/vue.js"></script>
 <script src="/nipplejs/nipplejs.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/vector-text-data.js"></script>
-<script src="/vector-text.js"></script>
-<script src="/ship.js"></script>
-<script src="/asteroid.js"></script>
-<script src="/color-picker.js"></script>
-<script src="/main-view.js"></script>
+<script src="/view-vector-text-data.js"></script>
+<script src="/view-vector-text.js"></script>
+<script src="/view-ship.js"></script>
+<script src="/view-meteor.js"></script>
+<script src="/view-color-picker.js"></script>
+<script src="/view-game-meteor-collect.js"></script>
 <script src="/input-touch.js"></script>
 <script src="/input-gamepad.js"></script>
 <script src="/index.js"></script>
