--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
 <script src="/view-meteor.js"></script>
 <script src="/view-color-picker.js"></script>
 <script src="/view-game-meteor-collect.js"></script>
+<script src="/view-shape-defs.js"></script>
+<script src="/main-view.js"></script>
 <script src="/input-touch.js"></script>
 <script src="/input-gamepad.js"></script>
 <script src="/index.js"></script>
