Add a countdown timer for player circle interactions - Crop SVG elements by bounding square - Resolves & Closes #20

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="/view-vector-text-data.js"></script>
 <script src="/view-vector-text.js"></script>
+<script src="/view-countdown-circle.js"></script>
 <script src="/view-ship.js"></script>
 <script src="/view-meteor.js"></script>
 <script src="/view-color-picker.js"></script>
