Add game "Slurp" minimum viable product - bubbles shrink when player ships overlap them - Implements #22

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 <script src="/view-meteor.js"></script>
 <script src="/view-color-picker.js"></script>
 <script src="/view-game-meteor-collect.js"></script>
+<script src="/view-game-slurp.js"></script>
 <script src="/view-shape-defs.js"></script>
 <script src="/main-view.js"></script>
 <script src="/input-touch.js"></script>
