Add a "Game Select" screen minimum viable product - Implements & Closes #19 - Closes # 22

--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,12 @@
 <script src="/view-vector-text.js"></script>
 <script src="/view-countdown-circle.js"></script>
 <script src="/view-ship.js"></script>
+<script src="/view-star.js"></script>
 <script src="/view-meteor.js"></script>
 <script src="/view-color-picker.js"></script>
 <script src="/view-game-meteor-collect.js"></script>
 <script src="/view-game-slurp.js"></script>
+<script src="/view-game-select.js"></script>
 <script src="/view-shape-defs.js"></script>
 <script src="/main-view.js"></script>
 <script src="/input-touch.js"></script>
