--- a/public/webgl.html
+++ b/public/webgl.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-<div id="appTarget"></div>
+<div id="appTarget" style="height: 100%;"></div>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/gl-matrix/gl-matrix.js"></script>
 <script src="/webgl.js"></script>
