WebGL: Add gltfLoader, Create/use models Ship, Star, Meteor - Use fetch to load all assets

--- a/public/webgl.html
+++ b/public/webgl.html
@@ -11,6 +11,7 @@
 <div id="appTarget" style="height: 100%;"></div>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/gl-matrix/gl-matrix.js"></script>
+<script src="/webgl-gltf-loader.js"></script>
 <script src="/webgl.js"></script>
 </body>
 </html>
