Add game "Cosmic Dash"'s race track generation and UI

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,10 @@
 <script src="/view-ship.js"></script>
 <script src="/view-star.js"></script>
 <script src="/view-meteor.js"></script>
+<script src="/view-vert.js"></script>
 <script src="/view-color-picker.js"></script>
 <script src="/view-game-meteor-collect.js"></script>
+<script src="/view-game-cosmic-dash.js"></script>
 <script src="/view-game-slurp.js"></script>
 <script src="/view-game-select.js"></script>
 <script src="/view-shape-defs.js"></script>
