Cave Escape: Preliminary cave vert placement and movement

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
 <script src="/view-color-picker.js"></script>
 <script src="/view-game-meteor-collect.js"></script>
 <script src="/view-game-cosmic-dash.js"></script>
+<script src="/view-game-cave-escape.js"></script>
 <script src="/view-game-slurp.js"></script>
 <script src="/view-game-select.js"></script>
 <script src="/view-shape-defs.js"></script>
