Fix performance of `countdown-circle` component

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
 <div id="appTarget"></div>
+<script>
+  window.tau = Math.PI * 2
+</script>
 <script src="/vue/vue.js"></script>
 <script src="/nipplejs/nipplejs.js"></script>
 <script src="/socket.io/socket.io.js"></script>
