--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 <script src="/view-color-picker.js"></script>
 <script src="/view-game-meteor-collect.js"></script>
 <script src="/view-game-cosmic-dash.js"></script>
-<script src="/view-game-cave-escape.js"></script>
+<script src="/view-game-wave-rider.js"></script>
 <script src="/view-game-slurp.js"></script>
 <script src="/view-game-select.js"></script>
 <script src="/view-shape-defs.js"></script>
