--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="/view-vector-text-data.js"></script>
 <script src="/view-vector-text.js"></script>
+<script src="/view-path-circle.js"></script>
 <script src="/view-countdown-circle.js"></script>
 <script src="/view-ship.js"></script>
 <script src="/view-star.js"></script>
