Galaxy Diner: Add basic functionality for serving up some orders!

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
 <script src="/view-game-slurp.js"></script>
 <script src="/view-game-select.js"></script>
 <script src="/view-game-name-entry.js"></script>
+<script src="/view-game-galaxy-diner-recipe.js"></script>
+<script src="/view-game-galaxy-diner-order.js"></script>
+<script src="/view-game-galaxy-diner.js"></script>
 <script src="/view-shape-defs.js"></script>
 <script src="/main-view.js"></script>
 <script src="/input-touch.js"></script>
