--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
 <script src="/view-game-galaxy-diner-recipe.js"></script>
 <script src="/view-game-galaxy-diner-order.js"></script>
 <script src="/view-game-galaxy-diner.js"></script>
+<script src="/view-game-dragons-hoard.js"></script>
 <script src="/view-shape-defs.js"></script>
 <script src="/main-view.js"></script>
 <script src="/input-touch.js"></script>
